[gd_scene load_steps=4 format=1]

[ext_resource path="res://Pistas/HUD/HUD.pista.gd" type="Script" id=1]
[ext_resource path="res://Pistas/HUD/Imagenes/MarcaDelMapa.png" type="Texture" id=2]
[ext_resource path="res://Pistas/HUD/Imagenes/MarcaDelMapaFantasma.png" type="Texture" id=3]

[node name="HUDpista" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 58.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="cuentaAtras" type="Label" parent="."]

rect/scale = Vector2( 14, 14 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 192.0
margin/top = 150.0
margin/right = 232.0
margin/bottom = 181.0
text = "3\n"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="info" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 103.0
margin/top = 49.0
margin/right = 143.0
margin/bottom = 80.0
text = "3\n"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ultima" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 94.0
margin/top = 8.0
margin/right = 137.0
margin/bottom = 25.0
text = "Ãšltima"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MiniMapa" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 19.0
margin/right = 524.0
margin/bottom = 110.0

[node name="Viewport" type="Viewport" parent="MiniMapa"]

rect = Rect2( 0, 0, 204, 91 )
own_world = false
world = null
transparent_bg = true
render_target/enabled = false
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="CameraMiniMapa" type="Camera" parent="MiniMapa/Viewport"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="Sprite" type="Sprite" parent="MiniMapa/Viewport/CameraMiniMapa"]

transform/scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )

[node name="fantasma" type="Sprite" parent="MiniMapa/Viewport/CameraMiniMapa"]

transform/scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


